--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
                     <nav class="navbar">
                         <img id="logo" src="logobanner1.png" alt="Logo Bruno Vieira">
-                        <a id="btn2" href="#">Sobre Mim</a>
-                        <a href="#">Meus Projetos</a>
-                        <a href="#">Contato</a>       
+                            <div id="navtext">
+                                <a id="btn2" href="#">Sobre Mim</a>
+                                <a href="#">Meus Projetos</a>
+                                <a href="#">Contato</a>
+                            </div>           
                     </nav>
                 </div>                                                                      
         </header>
