--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 </div>                                                                      
         </header>
         <main>
+            <div class="box1"></div>
+            <div class="box2"></div>
+            <div class="box3"></div>
             
         </main>
         <footer>
