--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <div class="navset">
 
                     <nav class="navbar">
-                        <img id="logo" src="logobanner1.png" alt="Logo Bruno Vieira">
+                        <a href="index.html"><img id="logo" src="logobanner1.png" alt="Logo Bruno Vieira"></a>
                             <div id="navtext">
-                                <a id="btn2" href="#">Sobre Mim</a>
+                                <a href="about.html">Sobre Mim</a>
                                 <a href="#">Meus Projetos</a>
                                 <a href="#">Contato</a>
                             </div>           
