--- a/about.html
+++ b/about.html
@@ -24,15 +24,18 @@
             </nav>
         </div>                                                                      
 </header>
-<main>
+<main id="about" class="about">
 
-    <div class="box1">
-    <h1>Sou um desenvolvedor determinado a se tornar um especialista em programação full-stack.
-    Embora eu ainda não tenha concluído a faculdade de análise e desenvolvimento de sistemas, estou dedicando meu tempo e esforço em destrancar a faculdade e concluir meus estudos. Tenho uma sólida experiência como técnico em hardware e atualmente estou aprendendo programação front-end. Estou desenvolvendo meu primeiro site do zero e criando um portfólio para demonstrar minhas habilidades de programação. Estou entusiasmado em utilizar tecnologias como HTML, CSS, JavaScript e React para criar experiências digitais envolventes e responsivas. Meu portfólio incluirá exemplos de projetos de programação que já concluí, bem como trabalhos que realizei como técnico de hardware. Isso permitirá que os empregadores em potencial avaliem minhas habilidades em diferentes áreas e vejam como me adapto a diferentes desafios. Estou comprometido em me tornar um desenvolvedor completo e competente e continuarei a aprender e aprimorar minhas habilidades. Estou sempre buscando novos desafios e oportunidades para me desenvolver profissionalmente e contribuir para projetos significativos.</h1>
-    </div>
+    <!-- <div class="box1"> -->
+    <img id="imgbruno" src="imgbruno.JPEG" alt="Foto de Bruno Vieira">
+        <div id="st_about" class="apresentacao_about">
+            <p>Sou um desenvolvedor determinado a se tornar um especialista em programação full-stack.
+            Embora eu ainda não tenha concluído a faculdade de análise e desenvolvimento de sistemas, estou dedicando meu tempo e esforço em destrancar a faculdade e concluir meus estudos. Tenho uma sólida experiência como técnico em hardware e atualmente estou aprendendo programação front-end. Estou desenvolvendo meu primeiro site do zero e criando um portfólio para demonstrar minhas habilidades de programação. Estou entusiasmado em utilizar tecnologias como HTML, CSS, JavaScript e React para criar experiências digitais envolventes e responsivas. Meu portfólio incluirá exemplos de projetos de programação que já concluí, bem como trabalhos que realizei como técnico de hardware. Isso permitirá que os empregadores em potencial avaliem minhas habilidades em diferentes áreas e vejam como me adapto a diferentes desafios. Estou comprometido em me tornar um desenvolvedor completo e competente e continuarei a aprender e aprimorar minhas habilidades. Estou sempre buscando novos desafios e oportunidades para me desenvolver profissionalmente e contribuir para projetos significativos.</p>
+        </div>
+    <!-- </div> -->
 
-    <div class="box2"></div>
-    <div class="box3"></div>
+    <!-- <div class="box2"></div> -->
+    <!-- <div class="box3"></div> -->
     
 </main>
 <footer>
