--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     </nav>
                 </div>                                                                      
         </header>
-        <main>
-            <div class="box1"></div>
-            <div class="box2"></div>
-            <div class="box3"></div>
+        <main class="index">
+            <!-- <div class="box1"></div> -->
+            <!-- <div class="box2"></div> -->
+            <!-- <div class="box3"></div> -->
             
         </main>
         <footer>
