--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     
 </main>
 <footer>
-    <p> Desenvolvido por Bruno Vieira</p>
+    <p> Desenvolvido por Bruno Vieira - Todos os Direitos Reservados </p>
 
 </footer>
 </body>
